--- a/src/Product.wxs
+++ b/src/Product.wxs
@@ -26,6 +26,7 @@
 						<Directory Id="lunasvgDir" Name="lunasvg"/>
 						<Directory Id="caltoolDir" Name="caltool"/>
 						<Directory Id="nknd2infoDir" Name="nknd2info"/>
+						<Directory Id="SmartLPMDir" Name="SmartLPM"/>
 					</Directory>
 				</Directory>
 				<Directory Id="ProgramMenuFolder">
@@ -36,24 +37,28 @@
 			</Directory>
 		</Directory>
 		<Component Id="mainComponent" Directory="INSTALLFOLDER" Guid="{66628E08-A530-4E2E-8F0D-E61599A2C0A1}">
-			<File Id="main" Source="run.bat" KeyPath="yes">
+			<File Id="main" Source="NkSplash.exe" KeyPath="yes">
 				<Shortcut Id="StartMenuShortcut" Name="QUAREP-LiMi Tool Kit" Description="QUAREP-LiMiTool Kit" Advertise="yes" Directory="QuaRepToolKitStartMenuFolder" WorkingDirectory="INSTALLFOLDER" Icon="Product.ico"/>
 			</File>
 			<File Id="commandpipepy" Source="CommandPipe.py"/>
 			<File Id="detectorphotoncalibrationpy" Source="DetectorPhotonCalibration.py"/>
 			<File Id="folderwatchpy" Source="FolderWatch.py"/>
+			<File Id="feedbackhtml" Source="Feedback.html"/>
 			<File Id="formspy" Source="forms.py"/>
 			<File Id="helphtml" Source="Help.html"/>
 			<File Id="mainpy" Source="main.py"/>
 			<File Id="pagebrowsepy" Source="pageBrowse.py"/>
 			<File Id="pagedetectorresultspy" Source="pageDetectorResults.py"/>
+			<File Id="pagefeedbackpy" Source="pageFeedback.py"/>
 			<File Id="pagehelppy" Source="pageHelp.py"/>
 			<File Id="pagelightsourceresultspy" Source="pageLightSourceResults.py"/>
 			<File Id="pagemeasurepy" Source="pageMeasure.py"/>
 			<File Id="pagenopage" Source="pageNoPage.py"/>
 			<File Id="ProductIco" Source="Product.ico"/>
+			<File Id="runbat" Source="run.bat"/>
 			<File Id="run_debugbat" Source="run_debug.bat"/>
 			<File Id="wxapppy" Source="wxApp.py"/>
+			<File Id="NkSplashini" Source="NkSplash.ini"/>
 			<RemoveFolder Id="RemoveQuaRepDatabaseStartMenuFolder" Directory="QuaRepToolKitStartMenuFolder" On="uninstall"/>
 			<RemoveFolder Id="RemoveQuaRepProgramMenuFolder" Directory="QuaRepProgramMenuFolder" On="uninstall"/>
 		</Component>
@@ -66,6 +71,7 @@
 			<ComponentGroupRef Id="cglunasvgFiles"/>
 			<ComponentGroupRef Id="cgcaltoolFiles"/>
 			<ComponentGroupRef Id="cgnknd2infoFiles"/>
+			<ComponentGroupRef Id="cgSmartLPMFiles"/>
 		</Feature>
 	</Product>
 </Wix>
